myteo/test/analyze/main_function/empty_file.exp
ERROR: test/analyze/main_function/empty_file.myte:1:0 No main function found in program
 1 | 
   | ^